[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Sprites/obstacle.png" type="Texture" id=1]
[ext_resource path="res://assets/Props/Enemigos/Enemigo.gd" type="Script" id=2]
[ext_resource path="res://assets/Props/Enemigos/Angry.anim" type="Animation" id=3]
[ext_resource path="res://assets/Props/Enemigos/Idle.anim" type="Animation" id=4]
[ext_resource path="res://assets/Props/Spikes/spike.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Sonidos/fx_flecha_.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 1.93645 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="Enemigo" type="KinematicBody2D" groups=[
"enemigo",
]]
z_index = 2
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
ocultar_spikes = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Cara" type="Node2D" parent="."]
z_index = 2

[node name="Sprite" type="Sprite" parent="Cara"]
light_mask = 4
texture = ExtResource( 1 )

[node name="Cejas" type="Node2D" parent="Cara"]
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D3" type="Polygon2D" parent="Cara/Cejas"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -6.16943, -6.19673, -0.0042057, -3.65145, -4.07664, -6.30985 )

[node name="Polygon2D4" type="Polygon2D" parent="Cara/Cejas"]
position = Vector2( 6.0521, -0.297557 )
scale = Vector2( 1, 0.890909 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -1.9273, -6.87547, -5.99974, -3.76458, -0.117329, -6.81891 )

[node name="Ojos Triangulo" type="Node2D" parent="Cara"]
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Cara/Ojos Triangulo"]
modulate = Color( 1, 0, 0, 1 )
light_mask = 4
material = SubResource( 3 )
position = Vector2( 1.91889, -2.80303 )
scale = Vector2( 0.243488, 0.438353 )
color = Color( 1, 0, 0, 1 )
offset = Vector2( -21.3541, 6.26542 )
polygon = PoolVector2Array( -8, -8, 0, 0, 8, -8 )

[node name="Polygon2D2" type="Polygon2D" parent="Cara/Ojos Triangulo"]
modulate = Color( 1, 0, 0, 1 )
light_mask = 4
material = SubResource( 3 )
position = Vector2( 8.14067, -2.74646 )
scale = Vector2( 0.243488, 0.438353 )
color = Color( 1, 0, 0, 1 )
offset = Vector2( -21.3541, 6.26542 )
polygon = PoolVector2Array( -8, -8, 0, 0, 8, -8 )

[node name="Ojos" type="Node2D" parent="Cara"]
visible = false
light_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D3" type="Polygon2D" parent="Cara/Ojos"]
modulate = Color( 1, 0, 0, 1 )
light_mask = 4
material = SubResource( 4 )
position = Vector2( 1.91889, -2.80303 )
scale = Vector2( 0.243488, 0.438353 )
color = Color( 1, 0, 0, 1 )
offset = Vector2( -21.3541, 6.26542 )
antialiased = true
polygon = PoolVector2Array( -8, -8, -7.91539, -0.0718713, 8.11316, 0.0571628, 8, -8 )

[node name="Polygon2D4" type="Polygon2D" parent="Cara/Ojos"]
modulate = Color( 1, 0, 0, 1 )
light_mask = 4
material = SubResource( 4 )
position = Vector2( 8.76286, -2.80303 )
scale = Vector2( 0.243488, 0.438353 )
color = Color( 1, 0, 0, 1 )
offset = Vector2( -21.3541, 6.26542 )
antialiased = true
polygon = PoolVector2Array( -8, -8, -7.91539, -0.0718713, 8.11316, 0.0571628, 8, -8 )

[node name="Spikes" type="Node2D" parent="Cara"]
visible = false

[node name="spike" parent="Cara/Spikes" instance=ExtResource( 5 )]
position = Vector2( 16, 0 )
rotation = 1.57079

[node name="spike2" parent="Cara/Spikes" instance=ExtResource( 5 )]
position = Vector2( -16, 0 )
rotation = -1.57079

[node name="spike3" parent="Cara/Spikes" instance=ExtResource( 5 )]
position = Vector2( 0, -16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_process_mode = 0
playback_speed = 1.5
anims/Angry = ExtResource( 3 )
anims/Idle = ExtResource( 4 )

[node name="spawn_left" type="Position2D" parent="."]
position = Vector2( -16, 0 )

[node name="spawn_right" type="Position2D" parent="." groups=[
"enemigo",
]]
position = Vector2( 16, 0 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="fx_fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0
max_distance = 500.0
attenuation = 0.594604
bus = "Fire"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
